--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">AI Planner</string>
+    <string name="facebook_app_id">${FACEBOOK_APP_ID}</string>
+    <string name="facebook_client_token">${FACEBOOK_CLIENT_TOKEN}</string>
 </resources>
